fix: radius border on bottom of game-list imgs not show fully; coin-flip optmization to avoid btn from jumping on result change

--- a/components/GameList.module.scss
+++ b/components/GameList.module.scss
@@ -20,6 +20,7 @@
       overflow: hidden;
       border-radius: 10px;
       img {
+        display: block;
         width: 100%;
       }
     }
